# prefect_certification

./: .gitignore  .tool-versions  deployment.yaml  ingest_pokemon_data-manifest.json  pyproject.toml
src/blocks/: pokemon_api_block.py  storage_block.py
src/flows/: ingest_pokemon_data.py
