[tool.poetry]
name = "prefect_certification"
version = "0.1.0"
description = ""
authors = ["Josh Wang <hello@wangjoshuah.com>"]

[tool.poetry.dependencies]
python = "^3.9"
prefect = "^2"
pokebase = "^1.3.0"
pandas = "^1.4.3"
prefect-dask = "^0.1.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
